@@ -22,9 +22,9 @@ package com.apple.foundationdb.relational.recordlayer.query;
 
 import com.apple.foundationdb.record.Bindings;
 import com.apple.foundationdb.record.PlanHashable;
-import com.apple.foundationdb.record.PlanSerializationContext;
 import com.apple.foundationdb.record.RecordMetaDataProto;
 import com.apple.foundationdb.record.query.plan.cascades.Quantifier;
+import com.apple.foundationdb.record.query.plan.cascades.RawSqlFunction;
 import com.apple.foundationdb.record.query.plan.cascades.expressions.RelationalExpression;
 import com.apple.foundationdb.record.query.plan.cascades.typing.Typed;
 import com.apple.foundationdb.relational.api.EmbeddedRelationalArray;
@@ -407,11 +407,11 @@ public class AstNormalizerTests {
                         .setDescription(functionDdl)
                         .setNormalizedDescription(canonicalFunctionDdl)
                         // invoking the compiled routine should only happen during plan generation.
-                        .withCompilableRoutine(ignored -> new CompiledSqlFunction("", ImmutableList.of(), ImmutableList.of(),
-                                ImmutableList.of(), Optional.empty(), null, Literals.empty()) {
+                        .withUserDefinedRoutine(ignored -> new CompiledSqlFunction("", List.of(), List.of(),
+                                List.of(), Optional.empty(), null, Literals.empty()) {
                             @Nonnull
                             @Override
-                            public RecordMetaDataProto.PUserDefinedFunction toProto(@Nonnull final PlanSerializationContext serializationContext) {
+                            public RecordMetaDataProto.PUserDefinedFunction toProto() {
                                 throw new NotImplementedException("unexpected call");
                             }
 
@@ -427,6 +427,7 @@ public class AstNormalizerTests {
                                 throw new NotImplementedException("unexpected call");
                             }
                         })
+                        .withSerializableFunction(new RawSqlFunction(name, functionDdl))
                         .build())
                 .build();
     }
@@ -518,26 +519,6 @@ public class AstNormalizerTests {
         validate("select B64'yv4=' from t1",
                 "select ? from \"T1\" ",
                 Map.of(constantId(1), ByteString.copyFrom(Hex.decodeHex("cafe"))));
-    }
-
-    @Test
-    void continuationIsStripped() throws Exception {
-        validate(List.of("select * from t1 with continuation b64'yv4='",
-                        "select * from   t1 with      continuation x'cafe'",
-                        "select * from t1"),
-                "select * from \"T1\" ");
-    }
-
-    @Test
-    void parseContinuation() throws Exception {
-        final var expectedContinuationStr = "FBUCFA==";
-        validate(List.of("select * from t1 with continuation b64'" + expectedContinuationStr + "'",
-                        "select * from t1 with  continuation    b64'" + expectedContinuationStr + "'"),
-                PreparedParams.empty(),
-                "select * from \"T1\" ",
-                List.of(Map.of(), Map.of()),
-                expectedContinuationStr,
-                -1);
     }
 
     @Test
@@ -886,27 +867,6 @@ public class AstNormalizerTests {
     }
 
     @Test
-    void parseContinuationWithPreparedParameters() throws Exception {
-        final var expectedContinuationStr = "FBUCFA==";
-        final var expectedContinuation = Base64.getDecoder().decode(expectedContinuationStr);
-        validate(List.of("select * from t1 with continuation ?",
-                        "select * from t1 with  continuation    ?          "),
-                PreparedParams.ofUnnamed(Map.of(1, expectedContinuation)),
-                "select * from \"T1\" ",
-                List.of(Map.of(), Map.of()),
-                expectedContinuationStr,
-                -1);
-
-        validate(List.of("select * from t1 with continuation ?param",
-                        "select * from t1 with  continuation    ?param          "),
-                PreparedParams.ofNamed(Map.of("param", expectedContinuation)),
-                "select * from \"T1\" ",
-                List.of(Map.of(), Map.of()),
-                expectedContinuationStr,
-                -1);
-    }
-
-    @Test
     void parseInPredicateAllConstantsWithPreparedParameters() throws Exception {
         // although these queries have different number of arguments in their in-predicate
         // they are treated as equivalent because Cascades will plan them the same way
@@ -1111,6 +1071,21 @@ public class AstNormalizerTests {
     }
 
     @Test
+    void normalizeQueryWithSchemaContainingTemporaryScalarFunction() throws Exception {
+        final var tempFunctionDefinition = "create temporary function self(in x bigint) on commit drop function as x";
+        final var schemaTemplate1 = schemaTemplateWithFunction(fakeSchemaTemplate, "foo", tempFunctionDefinition, true);
+        validate(List.of("select * from t1 where col1 > 42"),
+                PreparedParams.empty(),
+                "select * from \"T1\" where \"COL1\" > ? ",
+                List.of(Map.of(constantId(7), 42)),
+                null,
+                -1,
+                EnumSet.of(AstNormalizer.NormalizationResult.QueryCachingFlags.IS_DQL_STATEMENT),
+                Map.of(Options.Name.LOG_QUERY, false),
+                List.of(schemaTemplate1), normalizeQuery(tempFunctionDefinition));
+    }
+
+    @Test
     void normalizeQueryWithSchemaContainingNonTemporaryFunction() throws Exception {
         final var tempFunctionDefinition = "create function sq1(in x bigint) on commit drop function as select * from t1 where a < 40 + x ";
         final var schemaTemplate1 = schemaTemplateWithFunction(fakeSchemaTemplate, "foo", tempFunctionDefinition, false);
@@ -1131,10 +1106,12 @@ public class AstNormalizerTests {
         final var tmpFunction2 = "create temporary function tmpFunction2(in x bigint) on commit drop function as select * from t1 where a < 40 + x ";
         final var tmpFunction3 = "create temporary function tmpFunction3(in x bigint) on commit drop function as select * from t1 where a < 40 + x ";
         final var tmpFunction4 = "create temporary function tmpFunction4(in x bigint) on commit drop function as select * from t1 where a < 40 + x ";
+        final var tmpFunction5 = "create temporary function tmpFunction5(in x bigint) on commit drop function as x ";
         var schemaTemplate = schemaTemplateWithFunction(fakeSchemaTemplate, "tmpFunction1", tmpFunction1, true);
         schemaTemplate = schemaTemplateWithFunction(schemaTemplate, "tmpFunction2", tmpFunction2, true);
         schemaTemplate = schemaTemplateWithFunction(schemaTemplate, "tmpFunction3", tmpFunction3, true);
         schemaTemplate = schemaTemplateWithFunction(schemaTemplate, "tmpFunction4", tmpFunction4, true);
+        schemaTemplate = schemaTemplateWithFunction(schemaTemplate, "tmpFunction5", tmpFunction5, true);
 
         validate(List.of("select * from t1 where col1 > 42"),
                 PreparedParams.empty(),
@@ -1145,7 +1122,7 @@ public class AstNormalizerTests {
                 EnumSet.of(AstNormalizer.NormalizationResult.QueryCachingFlags.IS_DQL_STATEMENT),
                 Map.of(Options.Name.LOG_QUERY, false),
                 List.of(schemaTemplate), normalizeQuery(tmpFunction1) + "||" + normalizeQuery(tmpFunction2) + "||" +
-                        normalizeQuery(tmpFunction3) + "||" + normalizeQuery(tmpFunction4));
+                        normalizeQuery(tmpFunction3) + "||" + normalizeQuery(tmpFunction4) + "||" + normalizeQuery(tmpFunction5));
     }
 
     @Test
@@ -1156,12 +1133,16 @@ public class AstNormalizerTests {
         final var tmpFunction3 = "create temporary function tmpFunction3(in x bigint) on commit drop function as select * from t1 where a < 40 + x ";
         final var tmpFunction4 = "create temporary function tmpFunction4(in x bigint) on commit drop function as select * from t1 where a < 40 + x ";
         final var function2 = "create function function2(in x bigint) on commit drop function as select * from t1 where a < 40 + x ";
+        final var tmpFunction5 = "create temporary function tmpFunction5(in x bigint) on commit drop function as x ";
+        final var function3 = "create function function3(in x bigint) returns bigint as x ";
         var schemaTemplate = schemaTemplateWithFunction(fakeSchemaTemplate, "tmpFunction1", tmpFunction1, true);
         schemaTemplate = schemaTemplateWithFunction(schemaTemplate, "tmpFunction2", tmpFunction2, true);
         schemaTemplate = schemaTemplateWithFunction(schemaTemplate, "function1", function1, false);
         schemaTemplate = schemaTemplateWithFunction(schemaTemplate, "tmpFunction3", tmpFunction3, true);
         schemaTemplate = schemaTemplateWithFunction(schemaTemplate, "tmpFunction4", tmpFunction4, true);
         schemaTemplate = schemaTemplateWithFunction(schemaTemplate, "function2", function2, false);
+        schemaTemplate = schemaTemplateWithFunction(schemaTemplate, "tmpFunction5", tmpFunction5, true);
+        schemaTemplate = schemaTemplateWithFunction(schemaTemplate, "function3", function3, false);
 
         validate(List.of("select * from t1 where col1 > 42"),
                 PreparedParams.empty(),
@@ -1172,7 +1153,7 @@ public class AstNormalizerTests {
                 EnumSet.of(AstNormalizer.NormalizationResult.QueryCachingFlags.IS_DQL_STATEMENT),
                 Map.of(Options.Name.LOG_QUERY, false),
                 List.of(schemaTemplate), normalizeQuery(tmpFunction1) + "||" + normalizeQuery(tmpFunction2)
-                        + "||" + normalizeQuery(tmpFunction3) + "||" + normalizeQuery(tmpFunction4));
+                        + "||" + normalizeQuery(tmpFunction3) + "||" + normalizeQuery(tmpFunction4) + "||" + normalizeQuery(tmpFunction5));
     }
 
     @Test
@@ -1282,6 +1263,68 @@ public class AstNormalizerTests {
                 -1,
                 EnumSet.of(AstNormalizer.NormalizationResult.QueryCachingFlags.IS_DDL_STATEMENT),
                 Map.of(Options.Name.LOG_QUERY, false));
+    }
+
+    @Test
+    void visitInPredicateWithColumnReference() throws Exception {
+        // Test IN predicate with column reference instead of all constants
+        validate("select * from t1 where col1 in (fullColumnName)",
+                "select * from \"T1\" where \"COL1\" in ( \"FULLCOLUMNNAME\" ) ");
+    }
+
+    @Test
+    void visitInPredicateWithPreparedParameter() throws Exception {
+        // Test IN predicate with prepared parameter
+        java.sql.Array arrayParam = toArrayParameter(List.of("value1", "value2", "value3"));
+        validate("select * from t1 where col1 in ?",
+                PreparedParams.ofUnnamed(Map.of(1, arrayParam)),
+                "select * from \"T1\" where \"COL1\" in ? ",
+                Map.of(constantId(7), List.of("value1", "value2", "value3")));
+    }
+
+    @Test
+    void visitInPredicateWithMixedTypes() throws Exception {
+        // Test IN predicate with mixed constants and expressions
+        validate("select * from t1 where col1 in (10, col2 + 5, 'literal')",
+                "select * from \"T1\" where \"COL1\" in ( ? , \"COL2\" + ? , ? ) ",
+                Map.of(constantId(8), 10,
+                        constantId(12), 5,
+                        constantId(14), "literal"));
+    }
+
+    @Test
+    void visitInPredicateWithFullColumnNameInList() throws Exception {
+        // Test IN predicate with fullColumnName in the IN list - targets lines 453-454 in AstNormalizer
+        // This tests the case: 'apple' IN T.fruits where T.fruits is a column reference
+        validate("select * from T where 'apple' in T.fruits",
+                "select * from \"T\" where ? in \"T\" . \"FRUITS\" ",
+                Map.of(constantId(5), "apple"));
+    }
+
+    @Test
+    void visitInPredicateWithBooleanConstants() throws Exception {
+        // Test IN predicate with boolean constants
+        validate("select * from t1 where col1 in (true, false)",
+                "select * from \"T1\" where \"COL1\" in ( [ ] ) ",
+                Map.of(constantId(7), List.of(true, false)));
+    }
+
+    @Test
+    void visitNotInPredicateWithConstants() throws Exception {
+        // Test NOT IN predicate with constants - verifies that NOT token is handled correctly
+        // This tests the visitInPredicate method's handling of NOT token in AstNormalizer
+        validate("select * from t1 where col1 not in (10, 20, 30)",
+                "select * from \"T1\" where \"COL1\" not in ( [ ] ) ",
+                Map.of(constantId(8), List.of(10, 20, 30)));
+    }
+
+    @Test
+    void visitNotInPredicateWithColumnReference() throws Exception {
+        // Test NOT IN predicate with column reference - this tests lines 453-454 in AstNormalizer
+        // where ctx.inList().fullColumnName() != null for a NOT IN predicate
+        validate("select * from T where 'apple' not in T.fruits",
+                "select * from \"T\" where ? not in \"T\" . \"FRUITS\" ",
+                Map.of(constantId(5), "apple"));
     }
 
     @Nonnull
